aggiornati navigation e planmanagercontroller